--- a/tasks/pod-nw.yml
+++ b/tasks/pod-nw.yml
@@ -7,4 +7,5 @@
 #  delegate_to: "{{ item }}"
 #  with_items: "{{ groups['master'] }}"
       
-- debug: msg={{ podnw }}
+- debug: 
+    var: "{{ podnw }}"
