--- a/tasks/kube-init.yml
+++ b/tasks/kube-init.yml
@@ -1,10 +1,14 @@
 ---
 - name: Initialize kubernetes cluster 
-  command: "kubeadm init --apiserver-advertise-address=172.31.86.209 --pod-network-cidr=10.244.0.0/16"
+  command: "kubeadm init --apiserver-advertise-address={{ mprivateip }} --pod-network-cidr=10.244.0.0/16"
   register: initialize_clus
   ignore_errors: yes
   #run_once: true
-# delegate_to: "{{ item }}"
+ # delegate_to: "{{ item }}"
  # with_items: "{{ groups['master'] }}"
 
-- debug: msg={{ initialize_clus }}
+- debug:   
+    var: "{{ initialize_clus }}"
+
+
+
