--- a/tasks/kube-packges.yml
+++ b/tasks/kube-packges.yml
@@ -1,3 +1,4 @@
+---
 - name: Disable SWAP
   command: "{{ item }}" 
   with_items: 
@@ -20,7 +21,7 @@
 - name: Install Kubernets compatible Docker 
   yum: 
     name: docker-ce-18.06.1.ce-3.el7*
-   state: present
+    state: present
 
 - name: Start and enable Docker service
   service:
@@ -29,7 +30,8 @@
     enabled: yes
   register: docser
    
-- debug: msg={{ docser }}
+- debug: 
+    var: "{{ docser }}"
        
 
 - name: Create repository for kubernetes
@@ -60,5 +62,6 @@
     enabled: yes
   register: kubeser
 
-- debug: msg={{ kubeser }}
+- debug: 
+    var: "{{ kubeser }}"
     
