--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,37 +1,62 @@
 ---
 # tasks file for kubernetes-setup
 #
-#- name: Bring private ip of remote server
- # set_fact:
-  #  mprivateip: "{{ ansible_eth0.ipv4.address }}"
-- debug: msg={{ mprivateip }}
+- debug: 
+    msg: "This is a private IP address of master :{{ mprivateip }}"
 
-#- include: fetch-mpip.yml
- # delegate_to: "{{ item }}"
-  #delegate_facts: true
-#  with_items: "{{ groups['master'] }}"
 
-#- include: kube-packges.yml
- # delegate_to: '{{ groups.cluster[1] }}' 
-#  with_items: "{{ groups['cluster'] }}"
+- include: kube-packges.yml
+  delegate_to: '{{ item  }}' 
+  with_items: "{{ groups['cluster'] }}"
 
-#- include: kube-init.yml 
-  #delegate_to: "{{ item }}"
- # delegate_to: '{{ groups.master[0] }}'
-  #with_items: "{{ groups['master'] }}"
 
-#- include: create-dir.yml
- # delegate_to: '{{ groups.master[0] }}'
-#  with_items: "{{ groups['master'] }}"
-#
-#- include: pod-nw.yml
- # delegate_to: '{{ groups.master[0] }}'
-#  with_items: "{{ groups['master'] }}"
-#
-#- include: token-ca-cert.yml
- # delegate_to: "{{ groups.master[0] }}"
-#  with_items: "{{ groups['master'] }}"
-#
-#- include: join-master-node.yml 
+- name: Initialize kubernetes cluster 
+  command: "kubeadm init --apiserver-advertise-address={{ mprivateip }} --pod-network-cidr=10.244.0.0/16"
+  register: initialize_clus
+  ignore_errors: yes
+  delegate_to: '{{ item  }}'
+  with_items: "{{ groups['master'] }}"
+
+   
+- include: create-dir.yml
+  delegate_to: "{{ item }}"  
+  with_items: "{{ groups['master'] }}"
+
+- include: pod-nw.yml
+  delegate_to: "{{ item }}" 
+  with_items: "{{ groups['master'] }}"
+
+- name: Get token list 
+  shell: kubeadm token list 
+  register: kubetoken
+  delegate_to: "{{ item }}"
+  with_items: "{{ groups['master'] }}"
+ 
+- debug: 
+    var: "{{ kubetoken }}"
+ 
+ 
+- name: Create CA-CERT
+  shell: "openssl x509 -pubkey -in /etc/kubernetes/pki/ca.crt | openssl rsa -pubin -outform der 2>/dev/null | openssl dgst -sha256 -hex | sed 's/^.* //'"
+  register: cacert
+  delegate_to: "{{ item }}"
+  with_items: "{{ groups['master'] }}"
+
+- debug:
+    var: "{{ cacert }}"
+
+
+
+- name: join worker node 
+  command: "kubeadm join {{ mprivateip }}:6443 --token {{ kubetoken.stdout[1].split()[0] }}  --discovery-token-ca-cert-hash sha256:{{ cacert.stdout }}"
+  register: joinwork
+  delegate_to: "{{ item  }}"
+  with_items: "{{ groups['worker'] }}"
+  
+- debug: 
+    msg: "{{ joinwork }}"
+
+
+
+# NEW WAY TO DELEGATE for single instance
  # delegate_to: "{{ groups.worker[0] }}"
-##  with_items: "{{ groups['worker'] }}"
