added kube init task into main file

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,11 +3,15 @@
 #
 - debug: 
     msg: "This is a private IP address of master :{{ mprivateip }}"
+  register: picip
 
+- debug: msg={{ picip }}
 
 - include: kube-packges.yml
   delegate_to: '{{ item  }}' 
-  with_items: "{{ groups['cluster'] }}"
+  delegate_facts: yes
+  loop: "{{ groups.cluster }}"
+  #with_items: "{{ groups['cluster'] }}"
 
 
 - name: Initialize kubernetes cluster 
@@ -15,6 +19,7 @@
   register: initialize_clus
   ignore_errors: yes
   delegate_to: '{{ item  }}'
+  delegate_facts: yes
   with_items: "{{ groups['master'] }}"
 
    
@@ -24,33 +29,35 @@
 
 - include: pod-nw.yml
   delegate_to: "{{ item }}" 
+  delegate_facts: yes
   with_items: "{{ groups['master'] }}"
 
 - name: Get token list 
   shell: kubeadm token list 
   register: kubetoken
   delegate_to: "{{ item }}"
+  delegate_facts: yes
   with_items: "{{ groups['master'] }}"
  
-- debug: 
-    var: "{{ kubetoken }}"
+- debug: msg={{ kubetoken }}
  
  
 - name: Create CA-CERT
   shell: "openssl x509 -pubkey -in /etc/kubernetes/pki/ca.crt | openssl rsa -pubin -outform der 2>/dev/null | openssl dgst -sha256 -hex | sed 's/^.* //'"
   register: cacert
   delegate_to: "{{ item }}"
+  delegate_facts: yes
   with_items: "{{ groups['master'] }}"
 
-- debug:
-    var: "{{ cacert }}"
+- debug: msg={{  cacert }}
 
 
 
 - name: join worker node 
   command: "kubeadm join {{ mprivateip }}:6443 --token {{ kubetoken.stdout[1].split()[0] }}  --discovery-token-ca-cert-hash sha256:{{ cacert.stdout }}"
   register: joinwork
-  delegate_to: "{{ item  }}"
+  delegate_to: "{{ item }}"
+  delegate_facts: yes
   with_items: "{{ groups['worker'] }}"
   
 - debug: 
@@ -60,3 +67,5 @@
 
 # NEW WAY TO DELEGATE for single instance
  # delegate_to: "{{ groups.worker[0] }}"
+ # delegate_to: '{{ item  }}'
+ #   loop: "{{ groups.cluster }}"
