--- a/tasks/pod-nw.yml
+++ b/tasks/pod-nw.yml
@@ -3,9 +3,8 @@
   command: "kubectl apply -f https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml"
   register: podnw
   ignore_errors: yes
-  # run_once: true
-#  delegate_to: "{{ item }}"
-#  with_items: "{{ groups['master'] }}"
+  delegate_to: "{{ item }}"
+  with_items: "{{ groups['master'] }}"
       
 - debug: 
     var: "{{ podnw }}"
