--- a/tasks/pod-nw.yml
+++ b/tasks/pod-nw.yml
@@ -6,5 +6,4 @@
   delegate_to: "{{ item }}"
   with_items: "{{ groups['master'] }}"
       
-- debug: 
-    var: "{{ podnw }}"
+- debug: msg={{ podnw }}
